[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "panalyze"
authors = [{name = "Wouter Grouve", email = "w.j.b.grouve@utwente.nl"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "numpy >= 1.26.4",
    "matplotlib >= 3.8.4",
    "pandas >= 2.2.2",
    "scipy >= 1.13.0"]
license = {file = "LICENSE.md"}

[project.urls]
Home = "https://github.com/wjbg"